--- a/html/index.html
+++ b/html/index.html
@@ -23,10 +23,12 @@
     </header>
     <main>
         <section class="hero_section" id="hero">
-            <h2 data-aos="fade-up">Ouça cada detalhe com clareza profissional</h2>
-            <p data-aos="fade-up" data-aos-delay="200">Headset x100 - Qualidade sonora que transforma a sua experiência</p>
-            <button data-aos="zoom-in" data-aos-delay="400">comprar</button>
-            <img src="../imagens/imagem-topo.png" alt="imagem-topo" width="732" height="auto" data-aos="fade-up" data-aos-delay="600">
+            <div class="texto-topo">
+                <h2 data-aos="fade-up">Ouça cada detalhe com clareza profissional</h2>
+                <p data-aos="fade-up" data-aos-delay="200">Headset x100 - Qualidade sonora que transforma a sua experiência</p>
+                <button data-aos="zoom-in" data-aos-delay="400">comprar</button>
+            </div>
+            <img src="../imagens/imagem-topo.png" alt="imagem-topo" data-aos="fade-up" data-aos-delay="600">
         </section>
         <section class="destaques" id="destaques">
             <div>
