--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
             <div class="texto-topo">
                 <h2 data-aos="fade-up">Ouça cada detalhe com clareza profissional</h2>
                 <p data-aos="fade-up" data-aos-delay="200">Headset x100 - Qualidade sonora que transforma a sua experiência</p>
-                <button data-aos="zoom-in" data-aos-delay="400">comprar</button>
+                <button data-aos="zoom-in" data-aos-delay="400"><a href="#">comprar</a></button>
             </div>
             <img src="../imagens/imagem-topo.png" alt="imagem-topo" data-aos="fade-up" data-aos-delay="600">
         </section>
