--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
                 <div class="depoimentos-nomes">
                     <!-- Depoimento 1 -->
                     <div>
-                        <img src="../icones/estrela.png" alt="estrela">
+                        <img src="../icones/estrela.png" alt="estrela" width="90px" height="auto">
                         <strong><p>“É muito confortável e resistente.”</p></strong>
                         <ul>
                             <li>
@@ -125,7 +125,7 @@
                     </div>
                     <!-- Depoimento 2 -->
                     <div>
-                        <img src="../icones/estrela.png" alt="estrela">
+                        <img src="../icones/estrela.png" alt="estrela" width="90px" height="auto">
                         <strong><p>“Muita qualidade e custo beneficio.”</p></strong>
                         <ul>
                             <li>
@@ -135,7 +135,7 @@
                     </div>
                     <!-- Depoimento 3 -->
                     <div>
-                        <img src="../icones/estrela.png" alt="estrela">
+                        <img src="../icones/estrela.png" alt="estrela" width="90px" height="auto">
                         <strong><p>“Uso no home office e nos jogos.”</p></strong>
                         <ul>
                             <li>
@@ -160,18 +160,28 @@
             </ul>
             <!-- Formulário de mensagem -->
             <form>
-                <input type="text" placeholder="Mensagem">
+                <textarea placeholder="Mensagem..." class="mensagem"></textarea>
                 <button type="submit">Enviar</button>
             </form>
         </div>
 
         <!-- Endereço e redes sociais -->
         <div class="local-redes">
-            <address>
-                Rua Carvalho, 123 - São Luís, MA
-            </address>
+            <div class="local-endereco">
+                <h3>Endereço</h3>
+                <address>
+                    Rua Carvalho, 123<br>
+                    São Luís-MA, Brasil<br>
+                    (98) 34567-7890
+                </address>
+            </div>
             <div class="social-media">
-                <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a>
+                <h3>Redes Sociais</h3>
+                <div class="sociais">
+                    <a href="#"><img src="../icones/facebook.png" alt="icone do facebook"></a><br>
+                    <a href="#"><img src="../icones/instagram.png" alt="icone do instagram"></a><br>
+                    <a href="#"><img src="../icones/twitter.png" alt="icone do twitter"></a>
+                </div>
             </div>
         </div>
     </footer>
