--- a/html/index.html
+++ b/html/index.html
@@ -30,9 +30,9 @@
             <div class="texto-topo">
                 <h2>Ouça cada detalhe com clareza profissional</h2>
                 <p data-aos-delay="200">Headset x100 - Qualidade sonora que transforma a sua experiência</p>
-                <button><a href="#">comprar</a></button>
+                <a href="#">comprar</a>
             </div>
-            <img src="../imagens/imagem-topo.png" alt="imagem-topo">
+            <img src="../imagens/imagem-topo.png" alt="imagem-topo" width="900px">
         </section>
 
         <!-- Seção de destaques com os principais benefícios -->
@@ -56,19 +56,19 @@
             <h2>Compre por categoria</h2>
             <div class="container-cards">
                 <!-- Card 1: Gamer -->
-                <div class="card card-animado">
+                <div class="card">
                     <img src="../imagens/imagem-card1.png" alt="Headset gamer de alto desempenho" width="175" height="auto">
                     <h3>Headsets Gamers</h3>
                     <p>Para uma experiência imersiva nos jogos</p>
                 </div>
                 <!-- Card 2: Bluetooth -->
-                <div class="card card-animado">
+                <div class="card">
                     <img src="../imagens/imagem-card2.png" alt="Bateria de longa duração" width="175" height="auto">
                     <h3>Headsets Bluetooth</h3>
                     <p>Conveniência sem fio para uso diário</p>
                 </div>
                 <!-- Card 3: Profissionais -->
-                <div class="card card-animado">
+                <div class="card">
                     <img src="../imagens/imagem-card3.png" alt="Qualidade e profissionalismo" width="175" height="auto">
                     <h3>headsets profissionais</h3>
                     <p>Áudio de alta qualidade para trabalho e estúdio</p>
@@ -99,7 +99,7 @@
                     </div>
 
                     <!-- Nome do cliente que fez a avaliação -->
-                    <div class="txt positon-absolute" id="caracteristica">
+                    <div class="txt position-absolute" id="caracteristica">
                         <ul>
                             <li>
                                 <p>Carla Meireles</p>
@@ -116,12 +116,12 @@
                     <!-- Depoimento 1 -->
                     <div>
                         <img src="../icones/estrela.png" alt="estrela" width="90px" height="auto">
-                        <strong><p>“É muito confortável e resistente.”</p></strong>
-                        <ul>
-                            <li>
-                                <p>Patrícia Mendes</p>
-                            </li>
-                        </ul>
+                            <strong><p>“É muito confortável e resistente.”</p></strong>
+                            <ul>
+                                <li>
+                                    <p>Patrícia Mendes</p>
+                                </li>
+                            </ul>
                     </div>
                     <!-- Depoimento 2 -->
                     <div>
