--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,8 @@
     <title>Headset Store</title>
     <!-- Link para o CSS da página -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- animação -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
 
@@ -19,7 +21,7 @@
                 <li><a href="#destaques">Destaques</a></li>
                 <li><a href="#categoria">Categorias</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#contact">Contatos</a></li>
+                <a href="#contact" id="contato">Contato</a>
             </ul>
         </nav>
     </header>
