--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
                 <p>Headset x100 - Qualidade sonora que transforma a sua experiência</p>
                 <a href="#">comprar</a>
             </div>
-            <img src="../imagens/imagem-topo.png" alt="imagem-topo" width="900px">
+            <img src="../imagens/imagem-topo.png" alt="imagem do topo">
         </section>
 
         <!-- Seção de destaques com os principais benefícios -->
